# fastapi-clean-ddd-arch-example

./: .env.example  .pre-commit-config.yaml  README.md  docker-compose.yaml  justfile  pyproject.toml  requirements.dev.txt  requirements.txt
migrations/: env.py
migrations/versions/2026/03/: 01_1839_18_d6eb6d5a3fe3_init.py
src/: config.py  main.py
src/application/: uow.py
src/application/interfaces/: account.py  base.py
src/application/services/: account.py
src/domain/: exceptions.py
src/domain/entities/: account.py
src/domain/value_objects/: money.py
src/infrastructure/: database.py
src/infrastructure/models/: __init__.py  account.py  base.py
src/infrastructure/repositories/: account.py  base.py
src/presentation/: exception_handlers.py
src/presentation/schemas/: accounts.py
src/presentation/schemas/common/: response.py
src/presentation/v1/: __init__.py  accounts.py
